overflow fix and footer on home page

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -47,6 +47,7 @@ footer {
   background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
+  overflow: auto;
 }
 
 header a,
